--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@ body {
       background-color: #f5f5f5; /* Light gray background */
     }
 
-    h1, h2, p {
+    h1, h2, h3, p {
       color: #333; /* Dark gray for headings and paragraphs */
+      text-align: center;
     }
     table {
       border: 1px solid #333; /* Gray border for all tables */
+      margin: auto;
     }
     hr.solid {
   border-top: 3px solid #bbb;
+    }
+    img {
+      margin: auto;
     }
   </style>
 </head>
@@ -34,7 +39,9 @@ body {
 <hr class="solid">
   <h2 id="mac-and-cheese">Mac and Cheese</h2>
 
-  <img src="images/mac_and_cheese.jpg" alt="Mac and Cheese">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/d/dd/8.28.12CheeseburgerMacByLuigiNovi1.jpg" 
+  width="400"
+  alt="Mac and Cheese">
 
   <ul>
     <li>Time: 55 minutes</li>
@@ -120,7 +127,9 @@ body {
 
   <h2 id="fried-chicken">Fried Chicken</h2>
 
-  <img src="images/fried_chicken.jpg" alt="Fried Chicken">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Fried-Chicken-Leg.jpg/1200px-Fried-Chicken-Leg.jpg" 
+  width="400"
+  alt="Fried Chicken">
 
   <ul>
     <li>Time: _</li>
@@ -190,6 +199,8 @@ body {
 
 <h3><strong>Step 3</strong></h3>
 <p><em>Drain potatoes and return to the pot. Slowly add warm milk mixture, blending it in with a potato masher or electric mixer until potatoes are smooth and creamy. Season with salt and pepper.</em></p>
+
+<p><em>Source: <a href="https://www.allrecipes.com/recipe/24771/basic-mashed-potatoes/">Allrecipes.com</a></em></p>
 
 <hr class="solid">
 
