--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@ body {
   alt="Fried Chicken">
 
   <ul>
-    <li>Time: _</li>
-    <li>Serves: _</li>
+    <li>Time: 1 hour</li>
+    <li>Serves: 4</li>
   </ul>
 
   <table>
@@ -137,10 +137,67 @@ body {
         <th>Ingredients</th>
         <th>Quantity</th>
       </tr>
+      <tr>
+        <td>Condensed Cream of Chicken Soup</td>
+        <td>1 can (10.5 ounce)</td>
+      </tr>
+      <tr>
+        <td>Eggs</td>
+        <td>1 large</td>
+      </tr>
+      <tr>
+        <td>Salt</td>
+        <td>to taste</td>
+      </tr>
+      <tr>
+        <td>Skinless Boneless Chicken Breasts</td>
+        <td>4 Halves</td>
+      </tr>
+      <tr>
+        <td>All-Purpose Flour</td>
+        <td>½ cup</td>
+      </tr>
+      <tr>
+        <td>Cornstarch</td>
+        <td>½ cup</td>
+      </tr>
+      <tr>
+        <td>Garlic Powder</td>
+        <td>½ teaspoon</td>
+      </tr>
+      <tr>
+        <td>Paprika</td>
+        <td>½ teaspoon</td>
+      </tr>
+      <tr>
+        <td>Salt and Pepper</td>
+        <td>to taste</td>
+      </tr>
+      <tr>
+        <td>Oil</td>
+        <td>for frying</td>
+      </tr>
     </thead>
     <tbody>
       </tbody>
   </table>
+
+<h3><strong>Step 1</strong></h3>
+<p><em>Combine condensed soup, egg, and seasoning salt (be careful, as soup is already salted) in a shallow dish or bowl; mix well. Dip chicken in mixture and turn to coat completely. Set aside.</em></p>
+
+<h3><strong>Step 2</strong></h3>
+<p><em>Mix together flour, cornstarch, garlic powder, paprika, salt, and pepper in a resealable plastic bag. Place chicken pieces, one at a time, in the bag, seal and shake to coat. Add more flour and cornstarch as necessary, but add them in equal parts.</em></p>
+
+<h3><strong>Step 3</strong></h3>
+<p><em>Heat oil in a deep-fryer or large saucepan to 375 degrees F (190 degrees C). Be sure to use enough oil to cover chicken pieces.</em></p>
+
+<h3><strong>Step 4</strong></h3>
+<p><em>Place coated chicken on a platter; allow to sit until outside becomes doughy (this is critical to ensure crispiness when fried). Once chicken coating is doughy, test oil by dropping a piece of coating into it; oil is ready if it starts to fry immediately.</em></p>
+
+<h3><strong>Step 5</strong></h3>
+<p><em>Working in batches, fry chicken pieces in hot oil until cooked through and the juices run clear, 7 to 10 minutes. Drain on paper towels and serve.</em></p>
+
+<p><em>Source: <a href="https://www.allrecipes.com/recipe/24778/better-than-best-fried-chicken/">Allrecipes.com</a></em></p>
 
 <hr class="solid">
 
@@ -220,7 +277,7 @@ body {
     </thead>
     <tbody>
       <tr>
-        <td>Flour (all purpose)</td>
+        <td>All-Purpose Flour</td>
         <td>3 cups</td>
       </tr>
       <tr>
